0.7.1/_sources/gallery/anisotropic_scale.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/anisotropic_scale.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_anisotropic_scale.py>`
        to download the full example as a Python script or as a
        Jupyter notebook..

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_anisotropic_scale.py:


Anisotropic data with scale
============================

Display a 3D image with anisotropic voxel spacing using the ``scale``
parameter so that the volume appears with correct proportions.

Microscopy data is often anisotropic: the voxel spacing differs across
axes.  Without ``scale``, napari treats every voxel as a unit cube and
the volume appears with incorrect proportions.
Setting ``scale`` to the real voxel dimensions corrects this.

Toggle the visibility of each layer to compare the difference.

.. tags:: visualization-nD, layers

.. GENERATED FROM PYTHON SOURCE LINES 17-58



.. image-sg:: /gallery/images/sphx_glr_anisotropic_scale_001.png
   :alt: anisotropic scale
   :srcset: /gallery/images/sphx_glr_anisotropic_scale_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    from skimage import data

    import napari

    # cells3d has voxel spacing approximately (0.29, 0.26, 0.26) in (z, y, x).
    # We subsample z by 4 and x by 2 to simulate more strongly anisotropic data.
    # After subsampling, the effective voxel spacing becomes (1.16, 0.26, 0.52).
    # The ratio is approximately (4.5, 1, 2), which we pass to ``scale``.
    cells = data.cells3d()
    nuclei = cells[::4, 1, :, ::2]

    scale = (4.5, 1, 2)

    viewer = napari.Viewer(ndisplay=3)

    viewer.add_image(
        nuclei,
        name='no scale',
        blending='additive',
        colormap='magenta',
    )

    viewer.add_image(
        nuclei,
        name='with scale',
        blending='additive',
        colormap='green',
        scale=scale,
    )

    viewer.layers['no scale'].bounding_box.line_color = 'magenta'
    viewer.layers['no scale'].bounding_box.visible = True
    viewer.layers['with scale'].bounding_box.line_color = 'green'
    viewer.layers['with scale'].bounding_box.visible = True

    viewer.camera.angles = (-45, 0, -60)
    viewer.fit_to_view()

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_anisotropic_scale.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: anisotropic_scale.ipynb <anisotropic_scale.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: anisotropic_scale.py <anisotropic_scale.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: anisotropic_scale.zip <anisotropic_scale.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
